Prepare stable development release version 0.21.0

--- a/styles/languages/go.less
+++ b/styles/languages/go.less
@@ -3,7 +3,7 @@
 title     Language Go                     +
 project   northem-dark-atom-syntax        +
 file      go.less                         +
-version                                   +
+version   0.21.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
