--- a/styles/languages/make.less
+++ b/styles/languages/make.less
@@ -1,7 +1,7 @@
 /*
 +++++++++++++++++++++++++++++++++++++++++++
 title     Language "Make"                 +
-project   northem-atom-syntax             +
+project   northem-dark-atom-syntax        +
 file      make.less                       +
 version   0.21.0                          +
 author    Arctic Ice Studio               +
